change version to 7.6.2 and plugin kafka read header